# enjoy

./: Cargo.toml  LICENSE  README.md
src/: main.rs  settings.rs
ui/: appwindow.slint
