[package]
name = "enjoy"
version = "0.1.0"
authors = ["João Freire <joao.freire@unity3d.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
daemonize = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.4"
system_status_bar_macos = "0.1.3"

[build-dependencies]
slint-build = "1.4"
